--- a/HTML/test1.html
+++ b/HTML/test1.html
@@ -1,11 +1,59 @@
 <HTML>
 	<HEAD>
-		<title>Hello!</title>
+		<meta charset="utf-8">
+		<title>
+			<!--주석-->
+			오늘의 시.
+		</title>
 	</HEAD>
-
 	<BODY>
-	서창호 바보!!!!
-	하하하
+		<img src="/Users/lee/dev/study/webGeBal/HTML/12.png">
+		<h1>
+			오늘의 시
+		</h1>
+		<hr>
+		<h2>
+			내가 너를
+		</h2>
+
+		<p>
+			<strong>
+				<u>나태주</u>
+			</strong>
+		</p>
+
+		<p>
+			내가 너를 얼마나 좋아하는지<br>
+			너는 몰라도 된다.<br>
+			너를 좋아하는 마음은<br>
+			오로지 나의 것이요.<br>
+			<br>
+			나의&nbsp;&nbsp;&nbsp; 그리움은 <br>
+			나 &lt;혼자만의&gt; 것으로도<br>
+			차고 넘치니까.<br>
+			<br>
+			나는 이제 너없이도<br>
+			너를 좋아할 수 있다.<br>
+		</p>
+		
+		<ul>
+			<li>
+				나
+			</li>
+			<li>
+				너
+			</li>
+		</ul>
+
+		<ol>
+			<li>
+				나
+			</li>
+			<li>
+				너
+			</li>
+		</ol>
+
 	</BODY>
 </HTML>
 
