--- a/HTML/test1.html
+++ b/HTML/test1.html
@@ -7,7 +7,8 @@
 		</title>
 	</HEAD>
 	<BODY>
-		<img src="/Users/lee/dev/study/webGeBal/HTML/12.png">
+		<a href="https://ko.wikipedia.org/wiki/%EB%85%B8%EC%9D%84"><img src="/Users/lee/dev/study/webGeBal/HTML/12.png">
+		</a>
 		<h1>
 			오늘의 시
 		</h1>
@@ -32,25 +33,42 @@
 			나 &lt;혼자만의&gt; 것으로도<br>
 			차고 넘치니까.<br>
 			<br>
-			나는 이제 너없이도<br>
+			나는 <a href="https://www.google.co.kr/search?ei=jsNYWuvLIcyy0gSRpbX4DQ&q=%EC%9D%B4%EC%A0%9C&oq=%EC%9D%B4%EC%A0%9C&gs_l=psy-ab.3...985.2447.0.2674.6.6.0.0.0.0.273.273.2-1.2.0....0...1c.1j4.64.psy-ab..4.2.454.6..0j35i39k1j0i10k1j0i131k1.181.LziRgCQ2en0" target="_blank"><button>이제</button></a>너없이도<br>
 			너를 좋아할 수 있다.<br>
 		</p>
 		
+
+		<h5>
+			맛있는 과일, 목차
+		</h5>
 		<ul>
 			<li>
-				나
+				<a href="https://ko.wikipedia.org/wiki/%EC%98%A4%EB%A0%8C%EC%A7%80">오렌지</a>
 			</li>
 			<li>
-				너
+				<a href="https://ko.wikipedia.org/wiki/%EC%82%AC%EA%B3%BC%EB%82%98%EB%AC%B4" target="_blank">사과</a>
+			</li>
+			<li>
+				<a href="#strawberry">딸기</a>
+			</li>
+			<li>
+				<a href="#kiwi">키위</a>
 			</li>
 		</ul>
 
 		<ol>
-			<li>
-				나
+			<li id = "strawberry">
+				딸기 : 딸기는 호냉성 열매채소(외형으로는 과일이지만)이기 때문에 냉량한 기후에 강하다. 생육에 적당한 온도는 17-20℃이며, 토양은 배수가 잘되고 수분을 알맞게 지닌 참흙이 좋다. 재배방법은 매년 가을에 새 모종을 심어 1번만 수확하는 1년식 재배와, 1번 모종을 심고 수년간 수확을 계속하는 다년식 재배방법이 있다. 1년식 재배는 따뜻한 지방에서 촉성재배 또는 반촉성재배를 할 때 쓰이는 방법으로서 고품질의 과실을 생산한다. 추운 지방에서는 주로 3-4년 수확을 계속하는 다년식 재배방법을 많이 이용하고 있다. 이 재배방식에서는 2-3년째가 수확량도 많고 품질도 좋다. 시설재배에서는 1년식 재배를 하지만, 노지재배에서는 다년식 재배가 많다. 모종을 뜨기 위한 딸기밭은 수확이 끝난 다음 2줄로 1줄씩 솎아내고, 포기 사이도 넓혀 거름을 충분히 주고, 나오는 포복지를 알맞게 배치하여 모종을 기른다. 아주 심는 시기는 9월 하순부터 10월 상순이 적기이다.
+
+				12월 상순부터 6월 상순까지 신선한 딸기가 출하된다. 생딸기는 딸기를 물로 씻은 후 그대로 먹거나 또는 설탕과 우유를 넣어서 먹어도 좋다. 쇼트케이크·샐러드에도 이용된다. 냉동 이용방법은 물로 씻은 후 영하 1℃에서 하루 정도 차게 하고, 여기에 설탕 30-40%를 넣고 동결시켜 영하 20℃로 저장한다. 이것은 그대로 이용할 수 있으며 또한 가공원료로도 쓰이고 냉동수송에도 적합하다. 잼이나 프리즈업으로도 많이 이용된다.
 			</li>
-			<li>
-				너
+			<hr>
+			<li id="kiwi">
+				키위 : 빽이 이 나지만 늙은 가지에는 없다. 잎은 어긋나고 원형·난원형 또는 도란형이며 끝이 팼고 가장자리에 가시같은 톱니가 있다.
+
+꽃은 6-7월에 피고 백색이다. 열매는 8-10월에 성숙하며 달걀 모양으로 생겼으며 갈색 털이 밀생하며 3-4개월간 저장이 된다. 과육의 중심부는 하얀색이며 주변에 깨알 같은 종자가 있고 주변은 연한 녹색이며 작고 검은 씨들이 박혀 있다. 또, 털이 달린 갈색의 껍질을 갖고 있다. 꽃은 이가화이므로 심을 때는 암나무 몇 그루에 수나무 1그루씩 섞어 심는 것이 좋다. 비타민 C가 풍부하여 열매 1개로 성인 1명이 필요로 하는 하루의 양이 충분하다고 한다. 열매는 생식도 하고 잼이나 아이스크림을 만드는데 사용된다. 최근에는 피부미용을 위한 얼굴팩으로 이용되기도 한다.
+
+맛은 딸기, 바나나, 파인애플을 혼합한 듯하나, 수확 후 충분한 숙성기간을 거치지 않으면 신맛이 강하다. 때문에 키위는 후숙 과일로 분류된다.
 			</li>
 		</ol>
 
